--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ File name: index.html
 Author: Dylan Belyk
 
 -->
-
+pallet
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -63,8 +63,8 @@ Author: Dylan Belyk
                     </div>
                 </div>
             </div>
-            <div class="tooltip"> <i id="pallet-dice" class="fa-solid fa-dice"></i>
-                <span class="tooltiptext">Click to reroll or click the swatch to copy the hex code - Color pallet for your game.</span>
+            <div class="tooltip"> <i id="palette-dice" class="fa-solid fa-dice"></i>
+                <span class="tooltiptext">Click to reroll or click the swatch to copy the hex code - Color palette for your game.</span>
             </div>
         </div>
 
